[gd_scene load_steps=4 format=3 uid="uid://p1pm4ytou6vp"]

[ext_resource type="TileSet" uid="uid://o55jpwl5whag" path="res://scene/world/world.tres" id="1_1fn6g"]
[ext_resource type="Script" path="res://scene/world/cloud.gd" id="1_txb3v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ummo"]
size = Vector2(66, 21)

[node name="Cloud" type="Area2D"]
script = ExtResource("1_txb3v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_4ummo")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_1fn6g")
cell_quadrant_size = 18
format = 2
layer_0/tile_data = PackedInt32Array(65534, 851968, 7, 65535, 917504, 7, 0, 917504, 7, 1, 983040, 7)

[node name="Uptimer" type="Timer" parent="."]
process_callback = 0

[node name="MoveTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Uptimer" to="." method="_on_uptimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
